k8s/customer-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-api
  template:
    metadata:
      labels:
        app: customer-api
    spec:
      containers:
        - name: customer-api
          image: customer-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
