k8s/customer-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-api
spec:
  selector:
    app: customer-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
