k8s/customer-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: customer-api.local
      http:
        paths:
          - path: /           # or /api if you want to prefix
            pathType: Prefix
            backend:
              service:
                name: customer-api
                port:
                  number: 8080
